src/objects/MediCal_Story__c.object
<CustomObject>
    <fields>
        <fullName>Medi_Cal_Region__c</fullName>
        <formula>CASE(County__c, 
&apos;Orange&apos;, &apos;South&apos;, 
&apos;Kern&apos;, &apos;Central&apos;, 
&apos;Fresno&apos;, &apos;Central&apos;, 
&apos;Alameda&apos;, &apos;Bay Area&apos;, 
&apos;Contra Costa&apos;, &apos;Bay Area&apos;, 
&apos;Santa Clara&apos;, &apos;Bay Area&apos;, 
&apos;Sonoma&apos;, &apos;Bay Area&apos;, 
&apos;San Francisco&apos;, &apos;Bay Area&apos;, 
&apos;San Mateo&apos;, &apos;Bay Area&apos;, 
&apos;Napa&apos;, &apos;Bay Area&apos;, 
&apos;Solano&apos;, &apos;Bay Area&apos;, 
&apos;Monterey&apos;, &apos;Bay Area&apos;, 
&apos;Santa Cruz&apos;, &apos;Bay Area&apos;, 
&apos;Marin&apos;, &apos;Bay Area&apos;, 
&apos;Sutter&apos;, &apos;Sacramento&apos;,
&apos;Butte&apos;, &apos;Sacramento&apos;,
&apos;Placer&apos;, &apos;Sacramento&apos;,
&apos;Riverside&apos;, &apos;South&apos;, 
&apos;San Bernardino&apos;, &apos;South&apos;, 
&apos;Sacramento&apos;, &apos;Sacramento&apos;, 
&apos;El Dorado&apos;, &apos;Sacramento&apos;,
&apos;San Joaquin&apos;, &apos;Sacramento&apos;, 
&apos;Yolo&apos;, &apos;Sacramento&apos;, 
&apos;Amador&apos;, &apos;Sacramento&apos;, 
&apos;Stanislaus&apos;, &apos;Sacramento&apos;, 
&apos;Los Angeles&apos;, &apos;South&apos;,
&apos;San Diego&apos;, &apos;South&apos;,
&apos;San Luis Obispo&apos;, &apos;South&apos;,
&apos;Santa Barbara&apos;, &apos;South&apos;,
&apos;Imperial&apos;, &apos;South&apos;,
&apos;Ventura&apos;, &apos;South&apos;,
&apos;San Benito&apos;, &apos;Central&apos;,
&apos;Kings&apos;, &apos;Central&apos;,
&apos;Tulare&apos;, &apos;Central&apos;,
&apos;Merced&apos;, &apos;Central&apos;,
&apos;Tuolumne&apos;, &apos;Central&apos;,
&apos;Mariposa&apos;, &apos;Central&apos;,
&apos;Madera&apos;, &apos;Central&apos;,
&apos;Lake&apos;, &apos;North&apos;,
&apos;Mendocino&apos;, &apos;North&apos;,
&apos;Siskiyou&apos;, &apos;North&apos;,
&apos;Tehama&apos;, &apos;North&apos;,
&apos;Shasta&apos;, &apos;North&apos;,
&apos;Humboldt&apos;, &apos;North&apos;,
&apos;Trinity&apos;, &apos;North&apos;,
&apos;Glenn&apos;, &apos;North&apos;,
&apos;Plumas&apos;, &apos;North&apos;,
&apos;Sierra&apos;, &apos;North&apos;,
&apos;Nevada&apos;, &apos;North&apos;,
&apos;Other&apos;
)</formula>
        <label>Medi-Cal Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Data_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Missed Data Entry field for the team that is auditing the paper forms.</description>
        <inlineHelpText>Missed Data Entry field for the team that is auditing the paper forms.</inlineHelpText>
        <label>Missed Data Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Phone is a cell?</description>
        <inlineHelpText>Phone is a cell?</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Goal__c</fullName>
        <label>New Goal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Accepted__c</fullName>
        <description>use for report;</description>
        <formula>IF(TEXT(Coordinator_Reviewed__c) = &quot;Yes - Not Accepted&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Accptd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Reviewed__c</fullName>
        <description>use for report;</description>
        <formula>IF(AND(TEXT(Coordinator_Reviewed__c) = &quot;Not Reviewed&quot;, Dummy_Story__c =FALSE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Questions_True__c</fullName>
        <description>Number of Questions answered as True</description>
        <formula>IF( Question_Unable_To_Get_Appt__c , 1, 0) 
+ IF( Question_Turned_Away__c, 1, 0) 
+ IF( Question_Wait_More_Than_Month__c, 1, 0)
+ IF( Question_Travel_Far__c, 1, 0)
+ IF( Question_Health_Suffered__c, 1, 0)</formula>
        <inlineHelpText>Number of Questions answered as True</inlineHelpText>
        <label>Number Questions True</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Goal__c</fullName>
        <description>workaround needed for reporting;</description>
        <label>Org Goal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <description>Check if Interviewer is blank otherwise default to Organizer names</description>
        <formula>if( OR(Interviewer__r.Account.Name = &apos;SEIU-UHW&apos;, Interviewer__r.Account.Name = &apos;GOOD HEALTH, GOOD JOBS FOR CALIFORNIA&apos;,Interviewer__r.Account.Name = &apos;KAISER-SOUTH BAY&apos;),
  Owner:User.FirstName &amp; &apos; &apos; &amp;  Owner:User.LastName,
  if( Division__c = &apos;COMMUNITY&apos;,  Community_Organizer__r.FirstName &amp; &apos; &apos; &amp; Community_Organizer__r.LastName  ,
    Interviewer__r.Account.Organizer_1__r.FirstName &amp; &apos; &apos; &amp; Interviewer__r.Account.Organizer_1__r.LastName
  )
)</formula>
        <inlineHelpText>Check if Interviewer is blank otherwise default to Organizer names</inlineHelpText>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Review_Comments__c</fullName>
        <label>Program Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Health_Suffered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has your health or a family member’s health suffered because you were unable to get the care you needed through Medi-Cal?</description>
        <inlineHelpText>Has your health or a family member’s health suffered because you were unable to get the care you needed through Medi-Cal?</inlineHelpText>
        <label>Health Suffered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Travel_Far__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you or your family member with Medi-Cal ever had to leave the U.S. or travel more than 30 minutes/10 miles to get care?</description>
        <inlineHelpText>Have you or your family member with Medi-Cal ever had to leave the U.S. or travel more than 30 minutes/10 miles to get care?</inlineHelpText>
        <label>Travel Far</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Turned_Away__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you or a family member ever been turned away by a hospital or clinic because you were a Medi-Cal beneficiary?</description>
        <inlineHelpText>Have you or a family member ever been turned away by a hospital or clinic because you were a Medi-Cal beneficiary?</inlineHelpText>
        <label>Turned Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Unable_To_Get_Appt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you or a family member with Medi-Cal ever been unable to get an appointment to see a doctor or specialist?</description>
        <inlineHelpText>Have you or a family member with Medi-Cal ever been unable to get an appointment to see a doctor or specialist?</inlineHelpText>
        <label>Unable To Get Appt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Wait_More_Than_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you or a family member with Medi-Cal ever waited more than a month to get care for a medical need?</description>
        <inlineHelpText>Have you or a family member with Medi-Cal ever waited more than a month to get care for a medical need?</inlineHelpText>
        <label>Wait More Than Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>If( Interviewer__r.Account.Name = &apos;SEIU-UHW&apos;,
Owner:User.Field_Director_Name__c,
Interviewer__r.Account.Regional_Director__r.FirstName &amp; &quot; &quot; &amp; Interviewer__r.Account.Regional_Director__r.LastName)</formula>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject__c</fullName>
        <description>Attorney Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;Reject&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resubmit__c</fullName>
        <description>Attorney Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;Resubmit&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Story_Best_Time_To_Contact__c</fullName>
        <description>Your story may help expose the Medi-Cal crisis and save lives.
When are the best days and times to reach you to learn more?</description>
        <inlineHelpText>Your story may help expose the Medi-Cal crisis and save lives.
When are the best days and times to reach you to learn more?</inlineHelpText>
        <label>Best Time To Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Story_Hope_To_Achieve__c</fullName>
        <description>What do you hope to achieve by sharing your story?</description>
        <inlineHelpText>What do you hope to achieve by sharing your story?</inlineHelpText>
        <label>Hope To Achieve</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Original_Health_Problem__c</fullName>
        <description>What was the original health problem you were seeking treatment for under Medi-Cal?</description>
        <inlineHelpText>What was the original health problem you were seeking treatment for under Medi-Cal?</inlineHelpText>
        <label>Original Health Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Problems_From_No_Care__c</fullName>
        <description>What problems did you have as a result of not getting care when you needed it?
(How did it negatively affect your health, pain, sleep, family, work, etc.?)</description>
        <inlineHelpText>What problems did you have as a result of not getting care when you needed it?
(How did it negatively affect your health, pain, sleep, family, work, etc.?)</inlineHelpText>
        <label>Problems From No Care</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Tried_To_Get_Care__c</fullName>
        <description>What happened when you tried to get care through Medi-Cal? (How long did you wait for an appointment? Which clinics, doctors or hospitals did you go to? How far did you travel?)</description>
        <inlineHelpText>What happened when you tried to get care through Medi-Cal? (How long did you wait for an appointment? Which clinics, doctors or hospitals did you go to? How far did you travel?)</inlineHelpText>
        <label>Tried To Get Care</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unduplicated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wk1_Div_Goal__c</fullName>
        <description>use for report;</description>
        <formula>CASE( Division__c, &quot;KAISER&quot;, 56, &quot;HOSPITAL&quot;, 28,&quot;COMMUNITY&quot;,60,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk1 Div Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wk2_Accepted__c</fullName>
        <description>accepted stories for week 2;use for report;</description>
        <formula>IF( AND(AND(DATEVALUE(CreatedDate) &gt;= DATE(2016,7,25),DATEVALUE(CreatedDate) &lt;= DATE(2016,7,31)), Coordinator_Accepted__c =TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk2 Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wk2_Div_Goal__c</fullName>
        <description>use for report;</description>
        <formula>CASE( Division__c, &quot;KAISER&quot;, 140, &quot;HOSPITAL&quot;, 94,&quot;COMMUNITY&quot;,150,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk2 Div Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wk3_Accepted__c</fullName>
        <description>use for report;</description>
        <formula>IF( AND(AND(DATEVALUE(CreatedDate) &gt;= DATE(2016,8,1),DATEVALUE(CreatedDate) &lt;= DATE(2016,8,7)), Coordinator_Accepted__c =TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk3 Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wk3_Div_Goal__c</fullName>
        <description>use for report;</description>
        <formula>CASE( Division__c, &quot;KAISER&quot;, 252, &quot;HOSPITAL&quot;, 100,&quot;COMMUNITY&quot;,270,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk3 Div Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1A__c</fullName>
        <description>Atty Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;1A&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st__c</fullName>
        <description>Atty Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;1st&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd__c</fullName>
        <description>Atty Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;2nd&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd__c</fullName>
        <description>Atty Priority</description>
        <formula>IF(TEXT(Atty_Priority__c)=&quot;3rd&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wk1_Accepted__c</fullName>
        <description>accepted stories for week 1;use for report;</description>
        <formula>IF( AND(AND(DATEVALUE(CreatedDate) &gt;= DATE(2016,7,18),DATEVALUE(CreatedDate) &lt;= DATE(2016,7,24)), Coordinator_Accepted__c =TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wk1 Accepted</label>
        <type>Checkbox</type>
    </fields>
    <label>Medi-Cal Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MediCal_Last_5_Years__c</columns>
        <columns>Kidney_Disease__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Program_Review_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FCH_View</fullName>
        <columns>NAME</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Atty_Lead_Follow_Up_Contact__c</columns>
        <columns>Atty_Lead_Follow_Up_Result__c</columns>
        <columns>Atty_Lead_Follow_Up_Appt_Date__c</columns>
        <columns>Atty_Lead_Follow_Up_Status__c</columns>
        <columns>Atty_Intake_Date__c</columns>
        <columns>Atty_Intake_Grade_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>contains</operation>
            <value>1A,1st</value>
        </filters>
        <filters>
            <field>Medi_Cal_Region__c</field>
            <operation>equals</operation>
            <value>sacramento</value>
        </filters>
        <label>FCH View</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_Atty</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FCH_View1</fullName>
        <columns>NAME</columns>
        <columns>MediCal_Last_5_Years__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Division__c</columns>
        <columns>Coordinator_Reviewed__c</columns>
        <columns>Story_Original_Health_Problem__c</columns>
        <columns>Story_Problems_From_No_Care__c</columns>
        <columns>Story_Tried_To_Get_Care__c</columns>
        <columns>Program_Review_Comments__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coordinator_Reviewed__c</field>
            <operation>contains</operation>
            <value>Yes - Accepted</value>
        </filters>
        <filters>
            <field>MediCal_Last_5_Years__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Catha View</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_Atty</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FCH_View2</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Atty_Intake_In_Person_Meeting_Request__c</field>
            <operation>contains</operation>
            <value>High Priority,Medium Priority,Low Priority</value>
        </filters>
        <label>Tokaji</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hospital_Reviewers_10_16</fullName>
        <columns>NAME</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Organizer__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Story_Original_Health_Problem__c</columns>
        <columns>Story_Tried_To_Get_Care__c</columns>
        <columns>Story_Problems_From_No_Care__c</columns>
        <columns>Coordinator_Reviewed__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <columns>Alt_Zip_Code__c</columns>
        <columns>Program_Review_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>hospital</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/19/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Coordinator_Accepted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Hospital Oct. Nov. 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Julie_view</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Alt_Zip_Code__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Story_Problems_From_No_Care__c</columns>
        <columns>Atty_Intake_Date__c</columns>
        <columns>Organizer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>contains</operation>
            <value>1A,1st</value>
        </filters>
        <filters>
            <field>Atty_Intake_Grade_Content__c</field>
            <operation>notContain</operation>
            <value>A Plus,A,A Minus,B Plus,B,B Minus,C Plus,C,C Minus,D,F</value>
        </filters>
        <filters>
            <field>Coordinator_Reviewed__c</field>
            <operation>equals</operation>
            <value>Yes - Accepted</value>
        </filters>
        <label>Julie view</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_Atty</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L_A_meeting_11_2016</fullName>
        <columns>Contact_Name__c</columns>
        <columns>NAME</columns>
        <columns>Alt_City__c</columns>
        <columns>Alt_Zip_Code__c</columns>
        <columns>Atty_Assmnt_First_Meeting__c</columns>
        <columns>Atty_Assmnt_Content__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Atty_Intake_In_Person_Meeting_Request__c</field>
            <operation>equals</operation>
            <value>High Priority,Medium Priority,Low Priority</value>
        </filters>
        <label>L.A. meeting 11-2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Medi_Cal_Stories</fullName>
        <columns>NAME</columns>
        <columns>MediCal_Last_5_Years__c</columns>
        <columns>Kidney_Disease__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Coordinator_Reviewed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Organizer__c</field>
            <operation>contains</operation>
            <value>luisa</value>
        </filters>
        <label>My Medi-Cal Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_stories_for_Legal_review_JH</fullName>
        <columns>NAME</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Alt_City__c</columns>
        <columns>Division__c</columns>
        <columns>Story_Problems_From_No_Care__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coordinator_Reviewed__c</field>
            <operation>equals</operation>
            <value>Yes - Accepted</value>
        </filters>
        <label>New stories for Legal review (JH)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Community_1st_1A_Before_9_19_16</fullName>
        <columns>NAME</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Division__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>equals</operation>
            <value>1A,1st</value>
        </filters>
        <filters>
            <field>Medi_Cal_Region__c</field>
            <operation>contains</operation>
            <value>sacramento</value>
        </filters>
        <label>Non-Community 1st &amp;1A SACRAMENTO</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Community_1st_1A_FRESNO</fullName>
        <columns>NAME</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Division__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <columns>Atty_Lead_Follow_Up_Date__c</columns>
        <columns>Atty_Lead_Follow_Up_Status__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>equals</operation>
            <value>1A,1st</value>
        </filters>
        <filters>
            <field>Medi_Cal_Region__c</field>
            <operation>contains</operation>
            <value>Central</value>
        </filters>
        <label>Non-Community 1st &amp;1A FRESNO</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Community_1st_1A_FRESNO1</fullName>
        <columns>NAME</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Division__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <columns>Atty_Lead_Follow_Up_Date__c</columns>
        <columns>Atty_Lead_Follow_Up_Status__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Intake_In_Person_Meeting_Request__c</field>
            <operation>equals</operation>
            <value>High Priority,Medium Priority,Low Priority</value>
        </filters>
        <filters>
            <field>Medi_Cal_Region__c</field>
            <operation>contains</operation>
            <value>Central</value>
        </filters>
        <label>Non-Community high &amp; med priority FRESNO</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Community_1st_1A_SACRAMENTO</fullName>
        <columns>NAME</columns>
        <columns>Medi_Cal_Region__c</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Division__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <columns>Atty_Intake_In_Person_Meeting_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Intake_In_Person_Meeting_Request__c</field>
            <operation>equals</operation>
            <value>High Priority,Medium Priority</value>
        </filters>
        <filters>
            <field>Medi_Cal_Region__c</field>
            <operation>contains</operation>
            <value>sacramento</value>
        </filters>
        <label>Non-Community High and Med Priority SAC</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Community_Re_Submits_Before_9_19_16</fullName>
        <columns>NAME</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Division__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>equals</operation>
            <value>Resubmit</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>9/19/2016 12:00 AM</value>
        </filters>
        <label>Non-Community Re-Submits Before 9.19.16</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Community_Re_Submits_Before_9_19_161</fullName>
        <columns>NAME</columns>
        <columns>Interviewee_City__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Organizer__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Division__c</columns>
        <columns>Atty_Priority__c</columns>
        <columns>Attorney_Story_Lead_Notes__c</columns>
        <columns>Atty_Lead_Print_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>Atty_Priority__c</field>
            <operation>equals</operation>
            <value>1A,1st</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>9/19/2016 12:00 AM</value>
        </filters>
        <label>Non-Community 1st &amp;1A Before 9/19/16</label>
        <language>en_US</language>
        <sharedTo>
            <group>Medi_Cal_Stories_All_Fields_Read</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Medi-Cal Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medi-Cal Stories</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Must_Enter_Community_Org</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Division__c  = &quot;COMMUNITY&quot;, ISBLANK( Community_Organizer__c ) )</errorConditionFormula>
        <errorDisplayField>Community_Organizer__c</errorDisplayField>
        <errorMessage>Please enter Community Organizer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Have_Phone</fullName>
        <active>true</active>
        <description>Must have cell phone or home phone. Cannot leave blank</description>
        <errorConditionFormula>OR(ISNULL(Home_Phone__c), ISBLANK( Home_Phone__c )) &amp;&amp; OR(ISNULL(Mobile_Phone__c), ISBLANK( Mobile_Phone__c ))</errorConditionFormula>
        <errorMessage>Must have Home Phone or Mobile Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_City</fullName>
        <active>true</active>
        <description>Make sure there there is non-blank Contact or non-blank Alt City</description>
        <errorConditionFormula>AND( OR(ISBLANK( Contact__c ) , ISNULL( Contact__c )), 
OR( ISBLANK( Alt_City__c ) , ISNULL( Alt_City__c )))</errorConditionFormula>
        <errorMessage>Make sure there there is non-blank Contact or non-blank Alt City</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Either_Contact_Or_Alt</fullName>
        <active>true</active>
        <description>You can have contact/interviewee information or alt information for names and city but not both</description>
        <errorConditionFormula>NOT( ISBLANK( Contact__c )) 
&amp;&amp; NOT(ISBLANK( Alt_First_Name__c ))
||
NOT( ISBLANK( Contact__c )) 
&amp;&amp; NOT(ISBLANK( Alt_Last_Name__c ) )</errorConditionFormula>
        <errorMessage>You can have contact/interviewee information or alt information for names and city but not both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_First_Name</fullName>
        <active>true</active>
        <description>Must have a non-blank Contact or non-blank Alt First Name</description>
        <errorConditionFormula>OR( ISBLANK( Contact__c ) , ISNULL(Contact__c)) &amp;&amp;  
OR( ISBLANK( Alt_First_Name__c ) , ISNULL( Alt_First_Name__c ) )</errorConditionFormula>
        <errorMessage>Must have a non-blank Contact or non-blank Alt First Name</errorMessage>
    </validationRules>
</CustomObject>